[package]
name = "ethereum_light_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { version = "0.15.0", features = ["http"] }
tokio = { version = "0.2.25", features = ["full"] }
sha3 = "0.10.1"
hex = "0.4"
